--- a/250905.md
+++ b/250905.md
@@ -1,1 +1,11 @@
-aaaaaaaaaaa
+def add(a, b):
+  """두 숫자를 더하는 함수"""
+  return a + b
+
+# 사용자로부터 숫자 입력받기
+num1 = float(input("첫 번째 숫자를 입력하세요: "))
+num2 = float(input("두 번째 숫자를 입력하세요: "))
+
+# 덧셈 함수 호출 및 결과 출력
+result = add(num1, num2)
+print(f"{num1} + {num2} = {result}")
